<resources>
    <string name="app_name">ARay</string>
    <string name="logo_name">Get A Look</string>
    <string name="slogan_name">We Care For You!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password</string>
    <string name="signup">Signup</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="create_account">Create New Account</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="next_btn">Next</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="otp_code_text">Code</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one time password sent on </string>
    <string name="verify_code">Verify Code</string>
    <string name="make_selection">Make \nSelection</string>
    <string name="forget_password_detail">Provide your account\'s email for which you want to reset your password!</string>
    <string name="make_selection_detail">Select which contact detail should we use to reset your password?</string>
    <string name="via_sms">Via SMS</string>
    <string name="via_email">Via Email</string>
    <string name="new_credentials">New \nCredentials</string>
    <string name="new_credentials_detail">Your identity has been verified, \nSet your new password.</string>
    <string name="password_updated">Password \nupdated</string>
    <string name="password_updated_success_message">Your password has been updated.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instruction2">\u2022 Cash on delivery available on all.</string>
    <string name="instruction1">\u2022 Free delivery on orders above Rs.1000</string>


</resources>